@@ -9,4 +9,5 @@ Implemented features:
 - PERSISTENCE
 - MULTIPLE GAMES
 
-How to run (client, server): $ java -jar <jar path> --help
+How to run server: $ java -jar <jar path> --help
+How to run client: $ java --add-modules=javafx.fxml,javafx.graphics,javafx.controls,javafx.base -jar <jar path> --help
